# chromium-bsu

./: .gitignore  .gitmodules  AUTHORS  CHANGES  INSTALL  Makefile.am  NEWS  README  README.install  README.vorbis  autogen.sh  chromium-bsu-config.h  configure  configure.ac  svn2cl-authors.txt  tundra.lua
.tx/: config
3pp/freetype2-custom/: ftconfig.h  ftmodule.h
3pp/ftgl-custom/: config.h
3pp/glpng/include/GL/: glpng.h
3pp/glpng/src/: glpng.c
3pp/png-custom/: pnglibconf.h
3pp/sdl-custom/: SDL_config_premake.h
data/: Makefile.am
data/doc/: Makefile.am  faq.htm  info.htm
data/doc/images/: Makefile.am
data/fonts/: space.txf.small
data/png/: Makefile.am
data/wav/: GAMEMENU.MID  GAMEMUSI.MID  Makefile.am  license.txt
m4/: Makefile.am
macos/: Chromium (Pro 6).mcp  Chromium Icon  Chromium.rsrc  ChromiumPrefix.h
misc/: Makefile.am  chromium-bsu.6  chromium-bsu.desktop  chromium.6  chromium.desktop
po/: LINGUAS  Makevars  POTFILES.in  bg.po  de.po  es.po  fr.po  it.po  ru.po  sv.po  tr.po  zh_CN.po  zh_TW.po
scripts/: Makefile.all  Makefile.no-setup  config.std  configure_functions
src/: Ammo.cpp  Ammo.h  Audio.cpp  Audio.h  AudioOpenAL.cpp  AudioOpenAL.h  AudioSDLMixer.cpp  AudioSDLMixer.h  CHROMIUM.pro  Config.cpp  Config.h  Doxyfile  EnemyAircraft.cpp  EnemyAircraft.h  EnemyAircraft_Boss00.cpp  EnemyAircraft_Boss00.h  EnemyAircraft_Boss01.cpp  EnemyAircraft_Boss01.h  EnemyAircraft_Gnat.cpp  EnemyAircraft_Gnat.h  EnemyAircraft_Omni.cpp  EnemyAircraft_Omni.h  EnemyAircraft_RayGun.cpp  EnemyAircraft_RayGun.h  EnemyAircraft_Straight.cpp  EnemyAircraft_Straight.h  EnemyAircraft_Tank.cpp  EnemyAircraft_Tank.h  EnemyAmmo.cpp  EnemyAmmo.h  EnemyFleet.cpp  EnemyFleet.h  Explosions.cpp  Explosions.h  Global.cpp  Global.h  Ground.cpp  Ground.h  GroundMetal.cpp  GroundMetal.h  (+55 more)
src-setup/: .chromium-music  Audio.cpp  Audio.h  ConfigFile.cpp  ConfigFile.h  Global.cpp  Global.h  HelpPage.cpp  HelpPage.h  HiScore.cpp  HiScore.h  HiScoreWidget.cpp  HiScoreWidget.h  MainWidget.cpp  MainWidget.h  Makefile  PlayList.cpp  PlayList.h  SETUP.pro  icon.xpm  main.cpp  main.h
src/analysis/: drawExplo  drawExplo.c
