MAINTAINERCLEANFILES = Makefile.in

pngdir = $(pkgdatadir)/png
dist_png_DATA = \
	check.png \
	chrome.jpg \
	cursor.png \
	darken.png \
	elect.png \
	electric.png \
	enemy00.png \
	enemy01-extra.png \
	enemy01.png \
	enemy01-rot.png \
	enemy02.png \
	enemy03-extra.png \
	enemy03.png \
	enemy04.png \
	enemy05.png \
	enemy06.png \
	enemyAmmo00.png \
	enemyAmmo01.png \
	enemyAmmo02.png \
	enemyAmmo03.png \
	enemyAmmo04.png \
	enemyAmmoExplo00.png \
	enemyAmmoExplo01.png \
	enemyAmmoExplo02.png \
	enemyAmmoExplo03.png \
	enemyAmmoExplo04.png \
	enemyExplo.png \
	explo.png \
	glitter.png \
	gndBaseSea.png \
	gndMetalBase00.png \
	gndMetalBase01.png \
	gndMetalBase02.png \
	gndMetalBlip.png \
	heroAmmo00.png \
	heroAmmo01.png \
	heroAmmo02.png \
	heroAmmoExplo00.png \
	heroAmmoExplo01.png \
	heroAmmoExplo02.png \
	heroAmmoFlash00.png \
	heroAmmoFlash01.png \
	heroAmmoFlash02.png \
	heroExplo00.png \
	heroExplo01.png \
	heroExplo02.png \
	hero.png \
	heroShields.png \
	heroSuper.png \
	life.png \
	menu_back.png \
	menu_updown.png \
	powerUpAmmo.png \
	powerUpShield.png \
	powerUpTex.png \
	reflect-blend.png \
	reflect-gnd.png \
	reflect.png \
	shields.png \
	statBar.png \
	stat-top.png \
	superBomb.png \
	useFocus.png \
	useItem00.png \
	useItem01.png
